feat(inbound): deserialize inbound connector properties as json